made changes (worst comment ever)

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 			<ul>
 				<li>bricks</li>
 				<li>mortal</li>
-				<li>wheelbarrow</li>
-				<li>shovel</li>
-				<li>gloves</li>
-				<li>rope</li>
+				<li>sand</li>
 			</ul>
 		</div>
 	</body>
