ok, so this time I used git add...

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 				<li>sand</li>
 			</ul>
 		</div>
+
+		<module-one>
+		</module-one>
+
+		<module-two>
+			#just a comment goes here.
+		</module-two>
 	</body>
 </html>
