--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 				<li>sand</li>
 			</ul>
 		</div>
-		<div>my featured module.</div>
+		
+		<module-two>
+			<div>>my featured module.</div>
+		</module-two>
+
 	</body>
 </html>
