added comment one

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		</div>
     
 		<module-one>
-			<div id=comment>Merged both comments</div>
+			<div id=comment>comment one</div>
 		</module-one>
     
 		<module-two>
