--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
-	<body>
-		<div>
-			<ul>
-				<li>bricks</li>
+    <body>
+        <div>
+            <ul>
+                <li>bricks</li>
 				<li>even more quickcrete</li>
 				<li>sand</li>
-			</ul>
+            </ul>
 		</div>
-    
-    <module-one>
-		</module-one>
-    
+
+        <module-one>
+            <div id="thediv">This is from branch 3</div>
+        </module-one>
+ 
 		<module-two>
-			<div>>my featured module.</div>
-		</module-two>
+		    <div>my featured module.</div>
+	    </module-two>
 
 	</body>
 </html>
