--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 			<div>>my featured module.</div>
 		</module-two>
 
-	</body>
+        <module-three>
+            <div id="anotherid">Now inside of branch feature1</div>
+        </module>
+
+    </body>
 </html>
