whoops, forget the comment again.   Just lceaned up index.html.  Ready to merge.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <html>
-    <body> <div>
+	<body> 
+		<div>
             <ul>
                 <li>bricks</li>
-		<li>even more quickcrete</li>
-		<li>sand</li>
+			  	<li>even more quickcrete</li>
+				<li>sand</li>
             </ul>
-	</div>
-
-        <module-one>
-            <div id="thediv">This is from branch 3</div>
-        </module-one>
-            </ul>
-	</div>
+		</div>
 
         <module-one>
             <div id="thediv">This is from branch 3</div>
         </module-one>
  
-	<module-two>
-	    <div>my featured module.</div>
-	</module-two>
+		<module-two>
+		    <div>my featured module.</div>
+		</module-two>
 
         <module-three>
-            <div id="anotherid">Now inside of branch feature1</div>
+            <div id="This is Module Three">Now inside of branch feature1</div>
         </module>
 
     </body>
